extension/public/popup.css
* {
  padding: 0;
  margin: 0;
}

body {
  width: 400px;
  outline: 1px solid black;
  font-family: "Anek Malayalam", sans-serif;
}

/*------- Header -------*/

header {
  background-color: #d9381e;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 16px;

  min-height: 80px;
  color: white;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
}

.logo a {
  cursor: pointer;
}

.logo a img {
  height: 36px;
}

.version {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 6px;
}

.version span {
  font-size: 16px;
}

.version img {
  height: 18px;
  cursor: pointer;
}

/*------- Content -------*/

.content {
  display: flex;
  column-gap: 10px;
  padding: 10px;
  min-height: 300px;

  background-color: rgba(0, 0, 0, 0.1);
}

.sites, .keywords {
  width: 50%;
  display: flex;
  flex-direction: column;

  background: #ffffff;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
}

h3 {
  font-size: 20px;
}

.sites-content, .keywords-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-grow: 1;
  padding: 16px 8px;
}

/*------- Top: Enabled Sites -------*/

.sites .toggle-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  row-gap: 12px;
}

.sites .toggle-list .toggle-item {
  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 10px;
}

.sites .toggle-list .toggle-item img {
  width: 36px;
  height: 36px;
}

.sites button {
  margin-top: 10px;
  text-decoration: underline;
  border: 0;
  background-color: rgba(255, 255, 255, 0);

  font-size: 16px;
  font-weight: 500;

  cursor: pointer;
  transition: 0.2s ease;
}

.sites button:hover {
  color: #d9381e;
}

.sites .global {
  background: rgba(0, 0, 0, 0.8);
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
  color: white;

  display: flex;
  justify-content: center;
  align-items: center;
  column-gap: 12px;
  padding: 16px 0px;
}

.sites .global img {
  height: 36px;
}

/*------- Top: Keywords -------*/

.keywords .btn-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 16px;
}

.keywords .btn-container button {
  width: 50%;
  background-color: #999999;
  border: none;
  color: white;
  padding: 8px;
}

.keywords .tags {
  min-height: 175px;
  height: 100%;
  margin: 8px 0px;
}

.keywords .tag-list {
  display: flex;
  flex-direction: column;
  align-items: center;

  font-size: 16px;
  row-gap: 7px;
  margin-top: 16px;
}

.keywords .tag-list .tag-item {
  padding: 0 12px 0 12px;
  color: white;
  font-weight: 500;
  font-size: 16px;

  border-radius: 12px;
  background-color: #c54ccf;

  max-width: 120px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.keywords .tag-list .tag-results-item {
  padding: 0 12px 0 12px;

  color: #c54ccf;
  font-weight: 500;
  font-size: 16px;

  border-radius: 12px;
  border: 2px solid #c54ccf;
  background-color: rgba(255, 255, 255, 0);

  max-width: 120px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.keywords .manage-tag-list-btn {
  color: white;
  font-weight: 600;

  background-color: #2196f3;
  border: none;
  border-radius: 10px;
  padding: 8px;

  cursor: pointer;
}

.keywords .manage-tag-list-btn:active {
  background-color: #47a8f8;
}

.edit-tags {
  resize: none;
  display: none;
  height: 100%;
}

.edit-tags-actions {
  display: none;
  column-gap: 8px;
}

.tags-action-btn {
  color: white;
  font-weight: 600;

  border: none;
  border-radius: 10px;
  padding: 8px;

  cursor: pointer;
}

#saveTagsBtn {
  background-color: #2196f3;
}

#cancelTagsBtn {
  background-color: #999999;
}
/*------- Footer -------*/

footer {
  background-color: #d9381e;
  display: flex;
  justify-content: center;
  align-items: center;

  min-height: 80px;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
}

footer a {
  background-color: #d9381e;
  display: flex;
  justify-content: center;
  align-items: center;

  color: white;
  font-weight: 500;
  font-size: 16px;
  text-decoration: underline;
}

footer img {
  width: 24px;
}

/*------- Switches -------*/

.switch {
  position: relative;
  display: inline-block;
  width: 40px;
  height: 20px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 16px;
  width: 16px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: #0f8e00;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196f3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(20px);
  -ms-transform: translateX(20px);
  transform: translateX(20px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

/* Tooltips */
.tooltip { 
  visibility: hidden; 
  position: absolute;
  z-index: 1;
  
  background-color: #000;
  color: #fff;
  padding: 4px;
  border-radius: 6px;
  font-size: 14px;
}

.tooltip-element {
  cursor: help;
}

.tooltip-element:hover .tooltip {
  visibility: visible;
}

